@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageChallengeRequested {
+	
+	public static String challengeRequested = ChatColor.GREEN + " has requested to battle you! Teleport to the PvP arena to battle them!";
+
+}
