@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageChallengeRequestedClient {
+	
+	public static String challengeRequested = ChatColor.GREEN + "You have requested to battle ";
+
+}
