@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessagePlayerNotFound {
+	
+	public static String playerNotFound = ChatColor.RED + "Could not find that player!";
+
+}
