@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageSyntaxError {
+	
+	public static String syntaxError = ChatColor.RED + "Check your Syntax!";
+
+}
